# turtlebot3

./: nucky.repos
lino_msgs/: CMakeLists.txt  package.xml
nucky/: package.xml
nucky_bringup/: CMakeLists.txt  package.xml
nucky_bringup/launch/: nucky_state_publisher.launch.py  robot.launch.py  rviz2.launch.py
nucky_cartographer/: CMakeLists.txt  package.xml
nucky_cartographer/launch/: cartographer.launch.py
nucky_description/: CMakeLists.txt  package.xml
nucky_description/meshes/: camera_bracket.part  camera_bracket.stl  camera_mnt.part  camera_mnt.stl  chassis.part  chassis.stl  chassis_collision.stl  front_riser.part  front_riser.stl  front_stand.part  front_stand.stl  imu_base.part  imu_base.stl  lidarbase.part  lidarbase.stl  lidarlr.stl  part_1.part  part_1.stl  robot.urdf  ultrasonicfc.stl  wheel_left.part  wheel_left.stl
nucky_description/urdf/: _d435.urdf  nucky_1.urdf  nucky_nucky.urdf
nucky_description/urdf/nucky_bringup/: CMakeLists.txt  package.xml
nucky_example/: package.xml
nucky_navigation2/: CMakeLists.txt  package.xml
nucky_navigation2/launch/: navigation2.launch.py
nucky_node/: CMakeLists.txt  package.xml
nucky_teleop/: CMakeLists.txt  package.xml  setup.py
turtlebot3/: CMakeLists.txt
