<?xml version="1.0"?>
<package format="3">
  <name>lino_msgs</name>
  <version>0.0.1</version>
  <description>The lino_msgs package</description>
  <maintainer email="jimenojmm@gmail.com">Juan Jimeno</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="mapping_rules.yaml"/>
  </export>
</package>
