<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nucky</name>
  <version>2.1.2</version>
  <description>
    ROS 2 packages for Nucky
  </description>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://nucky.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/nucky</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/nucky/issues</url>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="pyo@robotis.com">Pyo</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nucky_bringup</exec_depend>
  <exec_depend>nucky_cartographer</exec_depend>
  <exec_depend>nucky_description</exec_depend>
  <exec_depend>nucky_example</exec_depend>
  <exec_depend>nucky_navigation2</exec_depend>
  <exec_depend>nucky_node</exec_depend>
  <exec_depend>nucky_teleop</exec_depend>
  <exec_depend>lino_msgs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
